{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 22,
  "lineage": "5d61bc50-2e50-8110-eef6-a0a7f4189789",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ajju-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:302263057153:instance/i-0c00e8b317c8bcd93",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c00e8b317c8bcd93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ajay",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07cdefed73130f368",
            "private_dns": "ip-10-60-1-5.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.60.1.5",
            "public_dns": "ec2-44-204-165-53.compute-1.amazonaws.com",
            "public_ip": "44.204.165.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05110b15c57c2cb19",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c83a1131395ff270",
            "tags": {
              "Name": "ajju-server"
            },
            "tags_all": {
              "Name": "ajju-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bc231f7c375ee8d7"
            ]
          },
          "dependencies": [
            "aws_security_group.ajju-sg",
            "aws_subnet.public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ajjuigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:internet-gateway/igw-00321530a58e27a0c",
            "id": "igw-00321530a58e27a0c",
            "owner_id": "302263057153",
            "tags": {
              "Name": "ajju-ajjuigw"
            },
            "tags_all": {
              "Name": "ajju-ajjuigw"
            },
            "vpc_id": "vpc-0ad48c76fa93b7bdc"
          },
          "dependencies": [
            "aws_vpc.ajju"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jaiigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:302263057153:internet-gateway/igw-0d59396140cf86f7a",
            "id": "igw-0d59396140cf86f7a",
            "owner_id": "302263057153",
            "tags": {
              "Name": "raju-igw"
            },
            "tags_all": {
              "Name": "raju-igw"
            },
            "vpc_id": "vpc-01f3797f75c038dc2"
          },
          "dependencies": [
            "aws_vpc.raju"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:route-table/rtb-05d36d6681b8b4738",
            "id": "rtb-05d36d6681b8b4738",
            "owner_id": "302263057153",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00321530a58e27a0c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ajju-rt"
            },
            "tags_all": {
              "Name": "ajju-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad48c76fa93b7bdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ajjuigw",
            "aws_vpc.ajju"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:302263057153:route-table/rtb-01ac8e80fe84dd829",
            "id": "rtb-01ac8e80fe84dd829",
            "owner_id": "302263057153",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d59396140cf86f7a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "raju-rt"
            },
            "tags_all": {
              "Name": "raju-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f3797f75c038dc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.jaiigw",
            "aws_vpc.raju"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028d28110d96d4632",
            "route_table_id": "rtb-05d36d6681b8b4738",
            "subnet_id": "subnet-0c83a1131395ff270"
          },
          "dependencies": [
            "aws_internet_gateway.ajjuigw",
            "aws_route_table.rt",
            "aws_subnet.public1",
            "aws_vpc.ajju"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0250be2d610b88975",
            "route_table_id": "rtb-05d36d6681b8b4738",
            "subnet_id": "subnet-0af0b9b79571c341a"
          },
          "dependencies": [
            "aws_internet_gateway.ajjuigw",
            "aws_route_table.rt",
            "aws_subnet.public1",
            "aws_vpc.ajju"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicsubnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c12996f6d41b648",
            "route_table_id": "rtb-01ac8e80fe84dd829",
            "subnet_id": "subnet-079e30d6464737bae"
          },
          "dependencies": [
            "aws_internet_gateway.jaiigw",
            "aws_route_table.rtable",
            "aws_subnet.publicsubnet1",
            "aws_vpc.raju"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea1feb4a8f9bc001",
            "route_table_id": "rtb-01ac8e80fe84dd829",
            "subnet_id": "subnet-0bd1db1b61bed6f82"
          },
          "dependencies": [
            "aws_internet_gateway.jaiigw",
            "aws_route_table.rtable",
            "aws_subnet.publicsubnet1",
            "aws_vpc.raju"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ajju-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:security-group/sg-0bc231f7c375ee8d7",
            "description": "allow inbound and outbound rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc231f7c375ee8d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow all rules",
            "name_prefix": "",
            "owner_id": "302263057153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ajju-sg"
            },
            "tags_all": {
              "Name": "ajju-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad48c76fa93b7bdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ajju"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:302263057153:security-group/sg-00ca3c02d3fa5ac62",
            "description": "allow inbound and outbound rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ca3c02d3fa5ac62",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow all rules",
            "name_prefix": "",
            "owner_id": "302263057153",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "raju-sg"
            },
            "tags_all": {
              "Name": "raju-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01f3797f75c038dc2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.raju"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:subnet/subnet-0c83a1131395ff270",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.60.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c83a1131395ff270",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "302263057153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ajju-public1"
            },
            "tags_all": {
              "Name": "ajju-public1"
            },
            "vpc_id": "vpc-0ad48c76fa93b7bdc"
          },
          "dependencies": [
            "aws_vpc.ajju"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:subnet/subnet-0af0b9b79571c341a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.60.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af0b9b79571c341a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "302263057153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ajju-public2"
            },
            "tags_all": {
              "Name": "ajju-public2"
            },
            "vpc_id": "vpc-0ad48c76fa93b7bdc"
          },
          "dependencies": [
            "aws_vpc.ajju"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:302263057153:subnet/subnet-079e30d6464737bae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.40.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079e30d6464737bae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "302263057153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "raju-public1"
            },
            "tags_all": {
              "Name": "raju-public1"
            },
            "vpc_id": "vpc-01f3797f75c038dc2"
          },
          "dependencies": [
            "aws_vpc.raju"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:302263057153:subnet/subnet-0bd1db1b61bed6f82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.40.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd1db1b61bed6f82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "302263057153",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "raju-public2"
            },
            "tags_all": {
              "Name": "raju-public2"
            },
            "vpc_id": "vpc-01f3797f75c038dc2"
          },
          "dependencies": [
            "aws_vpc.raju"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ajju",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:302263057153:vpc/vpc-0ad48c76fa93b7bdc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.60.0.0/16",
            "default_network_acl_id": "acl-00b9e07132bd3caa8",
            "default_route_table_id": "rtb-07e3ba90a4520d37a",
            "default_security_group_id": "sg-04ac25ad5e5703cd0",
            "dhcp_options_id": "dopt-0592dcc59dc5db81a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ad48c76fa93b7bdc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e3ba90a4520d37a",
            "owner_id": "302263057153",
            "tags": {
              "Name": "ajju"
            },
            "tags_all": {
              "Name": "ajju"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "raju",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].central",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:302263057153:vpc/vpc-01f3797f75c038dc2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "acl-0a867df204625ff8d",
            "default_route_table_id": "rtb-027e2ca0686f4d52d",
            "default_security_group_id": "sg-0cd6fe721cc5ab7e0",
            "dhcp_options_id": "dopt-01d97ad0ea2aca41a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01f3797f75c038dc2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-027e2ca0686f4d52d",
            "owner_id": "302263057153",
            "tags": {
              "Name": "raju"
            },
            "tags_all": {
              "Name": "raju"
            }
          }
        }
      ]
    }
  ]
}